fix product grid overflow

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -13,7 +13,7 @@
   margin: auto;
   margin-top: 200px;
   padding-bottom: 30px;
-  width: 350px;
+  width: 370px;
   height: 320px;
   background: rgba(139, 139, 139, 0.8);
   box-sizing: border-box;
