--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -12,7 +12,7 @@
 .signUpForm {
   margin: auto;
   margin-top: 130px;
-  width: 350px;
+  width: 370px;
   height: 480px;
   background: rgba(139, 139, 139, 0.9);
   box-sizing: border-box;
